# Bide

./: .gitignore  CMakeLists.txt  README.md
include/: editor.hpp  highlighter.hpp
src/editor/: highlighter.cpp
